Final push (hopefully, it'll be fine)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,25 +28,36 @@ string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
 hunter_add_package(GTest)
 find_package(GTest CONFIG REQUIRED)
 
-# TODO: change template word to project name and delete this comment
+hunter_add_package(Boost COMPONENTS system filesystem)
+find_package(Boost CONFIG REQUIRED system filesystem)
+
 add_library(template STATIC
-  # enum your files and delete this comment
   ${CMAKE_CURRENT_SOURCE_DIR}/sources/source.cpp
 )
+
 add_executable(tests
   # TODO: enum your files and delete this comment
   ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
 )
+add_executable(testing
+  # TODO: enum your files and delete this comment
+  ${CMAKE_CURRENT_SOURCE_DIR}/sources/source.cpp
+)
 
-# TODO: change template word to project name and delete this comment
-target_include_directories(template 
+target_include_directories(template
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
+# TODO: change template word to project name and delete this comment
 target_include_directories(tests 
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
+target_include_directories(testing
+  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
 # TODO: change template word to project name and delete this comment
+target_link_libraries(template Boost::system Boost::filesystem)
 target_link_libraries(tests GTest::main template)
+target_link_libraries(testing Boost::system Boost::filesystem)
 
 enable_testing()
 add_test(NAME unit_tests COMMAND tests) 
